objects/OA__N_Visible_Activities__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines next options:
- number of visible rows;
- data format;
- process only &apos;My Activities&apos; or not</description>
    <fields>
        <fullName>OA__DateTime_Format__c</fullName>
        <label>DateTime Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__My_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if only &quot;My Activities&quot; must be processed</description>
        <inlineHelpText>Check if only &quot;My Activities&quot; must be processed</inlineHelpText>
        <label>My Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OA__VisibleRows__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Number of activities visible in the OPEN ACTIVITIES AND CLOSED ACTIVITIES fields</description>
        <inlineHelpText>Number of activities visible in the OPEN ACTIVITIES AND CLOSED ACTIVITIES fields</inlineHelpText>
        <label>Visible Rows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Visible Activities</label>
</CustomObject>